--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Tickyleaf</title>
+    <meta name="theme-color" content="#1f1f1f" />
+    <title>Trickyleaf</title>
     <style>
         .sized-font{
             font-size: 6vw;
