--- a/test.html
+++ b/test.html
@@ -1,1 +1,1 @@
-<html><body><a href="https://www.trickyleaf.com/wf/me"></a></body></html>
+<html><body><a href="https://www.trickyleaf.com/wf/me">Test</a></body></html>
