--- a/test.html
+++ b/test.html
@@ -1,1 +1,1 @@
-<html><body><a href="https://www.trickyleaf.com/wf/me">Test</a></body></html>
+<html><body><h1><a href="https://www.trickyleaf.com/wf/me">Test</a></h1><h1><a href="exp+wakefun://">Test2</a></h1></body></html>
